Loot Table and other Datagen Updates